Adding notes about multi-part batches
* Downloading of batch 2 on MGI failed because of disk space, so batch 2 was split into two parts, a and b.  This is b.
* Merging of two parts into one per-batch BamMap is done on /gscuser/mwyczalk/projects/CPTAC3/import/b2.summary, which is not version controlled.
* Future development of import should take into account the possibility of multi-part batches.  In particular, each part has a different IMPORT_DATA_H directory

--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
-* Log files should be deleted prior to start.  They are currently appended
+
+* figure out why using more space than expected
+* all RNA-Seq, some WXS and WGS which were incomplete or not downloaded (ready) in .b2 are started here
+  - confirm that all these are downloaded
